[project]
name = "dg_sling_dbt_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dg_sling_dbt_project.definitions"
code_location_name = "dg_sling_dbt_project"

[tool.setuptools.packages.find]
exclude=["dg_sling_dbt_project_tests"]
